# spectrum

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.py
configs/: config.yaml  generate.yaml  spectrogram.yaml
core/: Cargo.toml
core/src/: lib.rs
science/: .gitignore  README.md  install-venv.sh  requirements.txt  start-jupyter.sh
science/spectrum_utils/: data.py
spectrum-audio/: Cargo.toml
spectrum-audio/benches/: transformer_bench.rs
spectrum-audio/src/: audio_loop.rs  audio_state.rs  beat_tracking.rs  concurrent_tee.rs  config.rs  cyclical_buffer.rs  lib.rs  mappers.rs  math.rs  mp3.rs  raw_stream.rs  running_stat.rs  shared_data.rs  spectrogram.rs  transforms.rs
spectrum-serdes/: Cargo.toml  build.rs
spectrum-serdes/proto/: data.proto  sparse_stream.proto
spectrum-serdes/src/: error.rs  lib.rs  sparse.rs
spectrum-serdes/src/model/: data.rs  mod.rs  sparse_stream.rs
spectrum-viz/: Cargo.toml
spectrum-viz/src/: adapter_state.rs  backend_state.rs  buffer_state.rs  desc_set.rs  device_state.rs  event_loop.rs  framebuffer_state.rs  gx_constant.rs  gx_model.rs  gx_object.rs  image_state.rs  lib.rs  main.rs  pipeline_state.rs  render_pass_state.rs  renderer_state.rs  screen_size_state.rs  swapchain_state.rs  uniform.rs
spectrum-viz/src/data/: tri.frag  tri.vert
spectrum_utils/: plot.py
stream-gen/: Cargo.toml
stream-gen/src/: main.rs
viz/: Cargo.toml
viz/src/: main.rs
window/: Cargo.toml
window/src/: adapter_state.rs  gx_object.rs  main.rs
window/src/data/: tri.frag  tri.vert
