[package]
name = "spectrum-audio"
version = "0.1.0"
authors = ["Wojtek Swiderski <wswiders@uwaterloo.ca>"]
edition = "2018"

[dependencies]
cpal = "0.10.0"
itertools = "0.8"
minimp3 = "0.3"
num-complex = "0.2"
num-traits = "0.2"
rustfft = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
