[package]
name = "spectrum-serdes"
version = "0.1.0"
authors = ["Wojtek Swiderski <wswiders@uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.14.0"

[build-dependencies]
protobuf-codegen-pure = "2.14.0"
