[package]
name = "spectrum-viz"
version = "0.1.0"
authors = ["Wojtek Swiderski <wswiders@uwaterloo.ca>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
image = "0.21"
log = "0.4"
winit = "0.20.0"
arrayvec = "0.4"
glsl-to-spirv = "0.1.4"
gfx = "0.18"
gfx-hal = { path = "../../gfx/src/hal", version = "0.4", package = "gfx-hal" }
gfx-backend-empty = "0.4"
nalgebra-glm = "0.2"
spectrum-audio = { path = "../spectrum-audio" }

[target.'cfg(debug_assertions)'.dependencies]
env_logger = "0.6"

[dependencies.gfx-backend-vulkan]
path = "../../gfx/src/backend/vulkan"
version = "0.4"
features = ["x11"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
path = "../../gfx/src/backend/metal"
version = "0.4"
features = []
optional = true
