[package]
name = "window"
version = "0.1.0"
authors = ["Wojtek Swiderski <wswiders@uwaterloo.ca>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
image = "0.21"
log = "0.4"
winit = "0.19"
arrayvec = "0.4"
glsl-to-spirv = "0.1.4"
gfx-hal = "0.3"
gfx-backend-empty = "0.3"

[target.'cfg(debug_assertions)'.dependencies]
simple_logger = "1.3"

[dependencies.gfx-backend-vulkan]
version = "0.3"
features = ["winit", "x11"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3"
features = ["winit"]
optional = true
